ci: Disables integration tests
inconsistent results from tests, needs further investigation on a branch

--- a/.github/workflows/squidbot-validate.yml
+++ b/.github/workflows/squidbot-validate.yml
@@ -56,10 +56,11 @@ jobs:
                 -f docker-compose.yml \
                 -f docker-compose.override.yml \
                 -f docker-compose.val.yml up -d
-            bundle exec tests/voice/run.rb
-            bundle exec tests/txt_cmds/run.rb
         timeout-minutes: 5
-      
+                # DISABLED: Resolve GHA Env issues
+                # bundle exec tests/voice/run.rb
+                # bundle exec tests/txt_cmds/run.rb
+
       - name: Collect Docker Logs
         if: failure()
         uses: jwalton/gh-docker-logs@v2.2.1
